Bug 1171011 - Use only document padding for MOZ_GTK_ENTRY in XUL. r=karlt